[package]
name = "gitpoap-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"


[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.5", features = ["http"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
