[package]
name = "gitpoap-rs"
version = "0.1.0"
edition = "2021"
authors = ["woxjro"]
description = "A gitpoap client written in Rust"
keywords = ["gitpoap", "ethereum", "wasm", "web3", "rust"]
license = "MIT"
repository = "https://github.com/woxjro/gitpoap-rs"
readme = "README.md"
homepage = "https://github.com/woxjro/gitpoap-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"


[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.5", features = ["http"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
